[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/MSG_System/scripts/MSG_Box.gd" type="Script" id=1]
[ext_resource path="res://addons/MSG_System/img/window.png" type="Texture" id=2]
[ext_resource path="res://addons/MSG_System/fonts/font_mono.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/MSG_System/fonts/font_bold_italics.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/MSG_System/fonts/font_italics.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/MSG_System/fonts/font_bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/MSG_System/fonts/font_normal.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/MSG_System/sfx/dialogue_sound.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "def"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="GDScript" id=2]
script/source = "extends Label

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
#	text = str(get_node(\"../\").current_char) + \"/\" + str(get_node(\"../main/label\").text.length())
	text = str(get_node(\"../main/label\").visible_characters) + \"/\" + str(get_node(\"../main/label\").get_total_character_count())
#	pass
"

[node name="MSG_Box" type="ParallaxBackground"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="main" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = -270.0
margin_right = -64.0
margin_bottom = -10.0

[node name="NinePatchRect3" type="NinePatchRect" parent="main"]
modulate = Color( 0.152941, 0.164706, 0.203922, 1 )
anchor_right = 1.0
margin_left = 46.0
margin_top = 40.0
margin_right = -38.0
margin_bottom = 230.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="NinePatchRect" type="NinePatchRect" parent="main"]
modulate = Color( 0.25098, 0.27451, 0.384314, 1 )
anchor_right = 1.0
margin_left = 40.0
margin_top = 34.0
margin_right = -44.0
margin_bottom = 224.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="NinePatchRect2" type="NinePatchRect" parent="main"]
modulate = Color( 0.25098, 0.27451, 0.384314, 1 )
margin_left = 75.0
margin_top = 4.0
margin_right = 195.0
margin_bottom = 49.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="label" type="RichTextLabel" parent="main"]
anchor_right = 1.0
margin_left = 230.0
margin_top = 49.0
margin_right = -64.0
margin_bottom = 194.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[i]This[/i] is... | a [color=yellow]test[/color]."
text = "This is... | a test."

[node name="name" type="Label" parent="main"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_left = 75.0
margin_right = 195.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Mark"
align = 1

[node name="face" type="TextureRect" parent="main"]
margin_left = 90.0
margin_top = 50.0
margin_right = 180.0
margin_bottom = 204.0
expand = true

[node name="_continue" type="Label" parent="main"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -90.0
margin_right = -50.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 6 )
text = "...
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="main/_continue"]
autoplay = "def"
playback_speed = 0.4
anims/def = SubResource( 1 )

[node name="characters_timer" type="Timer" parent="."]
wait_time = 0.04

[node name="SFX_Timer" type="Timer" parent="."]
wait_time = 0.09

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -35.0
mix_target = 2

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -220.0
margin_right = -68.0
margin_bottom = -206.0
script = SubResource( 2 )
[connection signal="timeout" from="characters_timer" to="." method="_on_characters_timer_timeout"]
[connection signal="timeout" from="SFX_Timer" to="." method="_on_SFX_Timer_timeout"]
